# CHIP-8_EMULATOR

./: CMakeLists.txt  README.md
include/: Chip8.hpp  Constants.hpp  Platform.hpp
scripts/: build.sh
src/: Chip8.cpp  Platform.cpp  main.cpp
