CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CHIP_8_Emulator)

SET(SOURCE
src/main.cpp
src/Chip8.cpp
src/Platform.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

# FIND SDL2 PACKAGE
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

# LINK SDL2
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES})
